Thu Jul 31 01:18:59 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (display): Check for failure to open the preformatted
	  cat file (Coverity CID #14).

Thu Jul 31 01:01:13 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/util.c (lang_dir): Free ld if returning xstrdup ("C") instead
	  (Coverity CID #17).

Thu Jul 31 00:55:36 BST 2008  Colin Watson  <cjwatson@debian.org>

	* lib/pathsearch.c (pathsearch): Free path if returning early due to
	  being given a qualified name (Coverity CID #16).

Thu Jul 31 00:51:58 BST 2008  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_pump): Free known_source before returning
	  (Coverity CID #15).

Thu Jul 31 00:47:43 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/whatis.c (word_fnmatch): Free lowwhatis on return paths
	  (Coverity CID #25).

Thu Jul 31 00:40:29 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/catman.c (parse_for_sec): Fix initialisation of initial_bit
	  (Coverity CID #28).

Tue Jul 15 15:58:24 BST 2008  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Sat Jul 12 16:47:11 BST 2008  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.3-pre1.
	* po/man-db.pot, po/*.po: Update.

Sat Jul 12 16:43:07 BST 2008  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Start 2.5.3.

Sat Jul  5 11:33:16 BST 2008  Colin Watson  <cjwatson@debian.org>

	* gnulib: Upgrade to 20080701.

Mon Jun  9 13:47:50 BST 2008  Colin Watson  <cjwatson@debian.org>

	* gnulib: Upgrade to 20080601.

Mon Jun  9 09:31:04 BST 2008  Yuri Kozlov  <kozlov.y@gmail.com>

	* man/po4a/po/ru.po: Update.

Tue Jun  3 09:54:17 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/ru.po: Update with msgmerge.

Tue Jun  3 09:53:59 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/ru/translator.add: Add dummy file.

Tue Jun  3 00:07:47 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/ru.po: New from Translation Project (thanks, Yuri
	  Kozlov).